# gazette

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  cmake_install.cmake  gazette  install_manifest.txt
.bzr/branch/: branch.conf  last-revision
.bzr/checkout/: dirstate
.bzr/repository/: pack-names
data/: org.pantheon.gazette.gschema.xml
po/: CMakeLists.txt  Makefile  ca.mo  ca.po  cmake_install.cmake  de.mo  de.po  en_GB.mo  en_GB.po  es.mo  es.po  et.mo  et.po  fi.mo  fi.po  fr.mo  fr.po  gazette.pot  it.mo  it.po  nl.mo  nl.po  pl.mo  pl.po  pt_BR.mo  pt_BR.po  sr.mo  sr.po  sv.mo  sv.po  uk.mo  uk.po
po/po/: Makefile  cmake_install.cmake
po/src/Plugs/: Makefile  cmake_install.cmake
src/: Config.c  Config.vala  Gazette.c  Gazette.vala  Gazette.vala~
src/Plugs/: CMakeLists.txt  Config.vala.cmake  Gazette  Makefile  RSS.c  RSS.vala  RecentFiles.c  RecentFiles.vala  Service.c  Service.vala  Weather.c  Weather.vala  cmake_install.cmake  gazette.plug  main.c  main.vala
src/Services/: Calendar.c  Calendar.vala  Calendar.vala~  Files.c  Files.vala  Files.vala~  Launcher.c  Launcher.vala  Launcher.vala~  News.c  News.vala  News.vala~  Service.c  Service.vala~  Stocks.c  Stocks.vala  Stocks.vala~  Weather.c  Weather.vala  Weather.vala~
src/Widgets/: GazetteWindow.c  GazetteWindow.vala  ShadowedLabel.c  ShadowedLabel.vala
vapi/: goa-1.0.vapi
